<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/etNik"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="NIK Penumpang"
        android:inputType="number" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Nama Penumpang"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnSubmitBooking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Pesan Tiket" />

    <TextView
        android:id="@+id/tvBookingStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>
